--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
     font-family: sans-serif;
 }
-body{
+
+body {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -12,24 +13,43 @@ body{
     background-color: black;
 
 }
-.main{
+
+header {
+    width: 100%;
+
+    position: absolute;
+    top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+h2 {
+    color: goldenrod;
+    font-size: 2.5rem;
+    text-shadow: 3px 3px silver;
+}
+
+.main {
     position: relative;
 }
-.clock{
-     width: 320px;
-     height: 320px;
-     display: flex;
-     align-items: center;
-     margin: -10px;
-     justify-content: center;
-     border-radius: 50%;
-     background-color: white;
-     border: 5px solid gold;
-     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-     background: radial-gradient(circle at 10% 20%, rgb(55, 209, 255) 0%, rgb(14, 31, 111) 100.2%);
-     
-     
-     
+
+.clock {
+    width: 320px;
+    height: 320px;
+    display: flex;
+    align-items: center;
+    margin: -10px;
+    justify-content: center;
+    border-radius: 50%;
+    background-color: white;
+    border: 5px solid gold;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    background: radial-gradient(circle at 10% 20%, rgb(55, 209, 255) 0%, rgb(14, 31, 111) 100.2%);
+
+
+
 }
 
 .main .clock span {
@@ -38,7 +58,8 @@ body{
     inset: 12px;
     text-align: center;
 }
-.main .clock span b{
+
+.main .clock span b {
     transform: rotate(calc(-30deg * var(--i)));
     display: flex;
     align-items: center;
@@ -46,9 +67,10 @@ body{
     font-size: 1.8rem;
     text-shadow: 2px 2px silver;
     color: gold;
-   
+
 }
-.clock::before{
+
+.clock::before {
     content: "";
     width: 15px;
     height: 15px;
@@ -57,13 +79,15 @@ body{
     position: absolute;
     z-index: 1;
 }
-.niddle{
+
+.niddle {
     display: flex;
     align-items: flex-end;
     justify-content: center;
     position: absolute;
 }
-.niddle i{
+
+.niddle i {
     width: 6px;
     height: var(--h);
     border-radius: 5px;
@@ -72,9 +96,9 @@ body{
 
 }
 
-footer{
+footer {
     width: 100%;
-    
+
     position: absolute;
     bottom: 20px;
     display: flex;
@@ -82,7 +106,8 @@ footer{
     justify-content: center;
     text-align: center;
 }
-h1{
+
+h1 {
     font-size: 1.2rem;
     color: goldenrod;
     text-shadow: 1px 1px silver;
