--- a/style.css
+++ b/style.css
@@ -6,12 +6,24 @@
 }
 
 body {
+   
+    background-color: black;
+
+}
+
+.container{
+    width: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.hero{
+    width: 400px;
     height: 100vh;
-    background-color: black;
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 header {
@@ -33,6 +45,7 @@ h2 {
 
 .main {
     position: relative;
+    
 }
 
 .clock {
