--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 .hero{
     width: 350px;
@@ -24,6 +25,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 header {
