--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@
 }
 
 body {
-
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: black;
 
 }
